tests/ui/consts/const-eval/const_panic-normalize-tabs-115498.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic-normalize-tabs-115498.rs:3:17
   |
LL | struct Bug([u8; panic!{"\t"}]);
   |                 ^^^^^^^^^^^^ evaluation panicked:     
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
